--- a/packages/lab/package.json
+++ b/packages/lab/package.json
@@ -52,7 +52,7 @@
     "prop-types": "^15.8.1",
     "rc-tooltip": "^5.2.2",
     "react-color": "^2.19.3",
-    "react-resize-aware": "^3.1.1"
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.47"
