--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@playwright/test": "^1.27.1",
-    "@storybook/addon-a11y": "^7.0.0-alpha.41",
-    "@storybook/addon-essentials": "^7.0.0-alpha.41",
-    "@storybook/addon-links": "^7.0.0-alpha.41",
-    "@storybook/react": "^7.0.0-alpha.41",
-    "@storybook/react-vite": "^7.0.0-alpha.41",
+    "@storybook/addon-a11y": "7.0.0-alpha.41",
+    "@storybook/addon-essentials": "7.0.0-alpha.41",
+    "@storybook/addon-links": "7.0.0-alpha.41",
+    "@storybook/react": "7.0.0-alpha.41",
+    "@storybook/react-vite": "7.0.0-alpha.41",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
@@ -50,7 +50,7 @@
     "pretty-quick": "^3.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "^7.0.0-alpha.41",
+    "storybook": "7.0.0-alpha.41",
     "typescript": "^4.8.4",
     "vite": "^3.1.8",
     "vite-tsconfig-paths": "^3.5.2"
