chore: fix workflows

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -2,11 +2,28 @@ name: Pull Request
 on:
   pull_request:
     branches:
-      - ${{ github.ref_name }}
+      - master
+
+# flow:
+# +------------------------------------+     +---------------------------------+
+# |Static-Checks (Licenses, Lint, Jest)|     |Build-Storybook (v2 and v3 store)|
+# +----------+-------------------------+     +--------------+------------------+
+#            |                                              |
+#            |                   +-----------+------------------------------------------------------------+
+#            |                   |           |              |                   |              |          |
+#            |             +-----v----+ +----v-----+ +------v-----------+ +-----v-----+ +------v----------+
+#            |             |A11Y-Tests| |Applitools| |  Robot (chrome)  | |Playwright | |Github-Deployment|
+#            |             +--------+-+ +--+-------+ +------+-----------+ +------+----+ +------+----------+
+#            |                      |      |                |                    |             |
+#            |                      |      |                |                    |             |
+#            |                      |      |                |                    |             |
+#            |                    +-v------v-+              |                    |             |
+#            +------------------->|Notify-End|<-------------+--------------------+-------------+
+#                                 +----------+
 
 env:
   DOCUMENTATION_PUBLISH_REPO: ${{ github.repository_owner }}/${{ github.repository_owner }}.github.io
-  DOCUMENTATION_PUBLISH_BRANCH: ${{ github.ref_name }}
+  DOCUMENTATION_PUBLISH_BRANCH: master
   DOCUMENTATION_PUBLISH_FOLDER: uikit/pr-${{ github.event.number }}
   DOCUMENTATION_PUBLISH_MESSAGE: "docs: storybook for PR ${{ github.event.number }} of ${{ github.repository }}"
   DOCUMENTATION_URL: https://${{ github.repository_owner }}.github.io/uikit/pr-${{ github.event.number }}/
@@ -410,7 +427,15 @@ jobs:
   Notify-End:
     name: Notify End
     if: github.event.pull_request.head.repo.full_name == github.repository && github.actor != 'dependabot[bot]' && always()
-    needs: [Static-Checks, Github-Deployment, Applitools, A11Y-Tests, Robot, Playwright]
+    needs:
+      [
+        Static-Checks,
+        Github-Deployment,
+        Applitools,
+        A11Y-Tests,
+        Robot,
+        Playwright,
+      ]
     runs-on: ubuntu-latest
 
     steps:
