--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "@commitlint/cli": "^17.2.0",
     "@commitlint/config-conventional": "^17.2.0",
     "@playwright/test": "^1.27.1",
-    "@storybook/addon-a11y": "^7.0.0-alpha.41",
-    "@storybook/addon-essentials": "^7.0.0-alpha.41",
-    "@storybook/addon-links": "^7.0.0-alpha.41",
-    "@storybook/react": "^7.0.0-alpha.41",
-    "@storybook/react-vite": "^7.0.0-alpha.41",
+    "@storybook/addon-a11y": "^7.0.0-alpha.48",
+    "@storybook/addon-essentials": "^7.0.0-alpha.48",
+    "@storybook/addon-links": "^7.0.0-alpha.48",
+    "@storybook/react": "^7.0.0-alpha.48",
+    "@storybook/react-vite": "^7.0.0-alpha.48",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
@@ -50,7 +50,7 @@
     "pretty-quick": "^3.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "^7.0.0-alpha.41",
+    "storybook": "^7.0.0-alpha.48",
     "typescript": "^4.8.4",
     "vite": "^3.2.3",
     "vite-tsconfig-paths": "^3.5.2"
@@ -71,5 +71,12 @@
     "extends": [
       "@commitlint/config-conventional"
     ]
+  },
+  "pnpm": {
+    "overrides": {
+      "yargs-parser@<=5.0.0": ">=5.0.1",
+      "node-fetch@<2.6.1": ">=2.6.1",
+      "node-fetch@<2.6.7": ">=2.6.7"
+    }
   }
 }
