--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -49,6 +49,9 @@
     "@emotion/styled": "^11.10.5",
     "@hitachivantara/uikit-styles": "workspace:*",
     "@styled-system/variant": "^5.1.5",
+    "clsx": "^1.2.1",
+    "focus-visible": "^5.2.0",
+    "focus-within-polyfill": "5.2.1",
     "styled-system": "^5.1.5",
     "vite": "^3.2.3",
     "vite-plugin-dts": "^1.7.0",
