--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
   },
   "scripts": {
     "dev": "pnpm --parallel -F=!'./tools/**' dev",
-    "doc": "storybook dev -p 6006 --no-manager-cache",
+    "doc": "storybook dev -p 6006 --no-manager-cache --no-open",
     "build": "pnpm -r build",
     "build:doc": "storybook build",
     "lint": "eslint --ext .ts,.tsx --cache",
     "lint-staged": "lint-staged",
     "format": "npx prettier -w .",
-    "type-check": "tsc --noEmit",
     "test": "pnpm --parallel -F=!'./tools/**' test",
     "test:e2e": "npx playwright test --config=config/playwright.config.ts",
     "clean": "npx rimraf ./**/node_modules ./**/dist",
