--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hitachivantara/uikit-react-core",
+  "name": "@hitachivantara/uikit-core",
   "version": "5.0.0",
   "private": false,
   "description": "UI Kit core React components for the Hitachi Vantara Design System.",
@@ -35,7 +35,7 @@
   ],
   "scripts": {
     "dev": "vite build --watch",
-    "build": "tsc && vite build && tsc-alias",
+    "build": "tsc && vite build",
     "test": "vitest run",
     "test:ui": "vitest --ui",
     "coverage": "vitest run --coverage"
@@ -47,6 +47,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@hitachivantara/uikit-styles": "workspace:*",
     "@styled-system/variant": "^5.1.5",
     "styled-system": "^5.1.5",
     "vite": "^3.2.3",
@@ -55,14 +56,12 @@
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.10.5",
-    "@hitachivantara/uikit-styles": "workspace:*",
     "@testing-library/user-event": "^14.4.3",
     "@vitejs/plugin-react": "^2.2.0",
     "@vitest/ui": "^0.25.1",
     "jsdom": "^20.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tsc-alias": "^1.7.1",
     "typescript": "^4.8.4",
     "vitest": "^0.25.1"
   }
