--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "lib": ["DOM", "ESNext"],
     "allowJs": false,
     "skipLibCheck": true,
-    "esModuleInterop": false,
+    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
@@ -18,9 +18,10 @@
     "declarationMap": true,
     "baseUrl": ".",
     "paths": {
-      "@hitachivantara/uikit-react-core": ["./packages/core/src"],
-      "@hitachivantara/uikit-react-icons": ["./packages/icons/bin"],
-      "@hitachivantara/uikit-styles": ["./packages/styles/src"]
+      "@hitachivantara/uikit-compat": ["packages/compat/src"],
+      "@hitachivantara/uikit-core": ["packages/core/src"],
+      "@hitachivantara/uikit-icons": ["packages/icons/bin"],
+      "@hitachivantara/uikit-styles": ["packages/styles/src"]
     },
     "preserveSymlinks": true,
     "noImplicitAny": false
