--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "@hitachivantara/uikit-icons": "workspace:*",
     "@hitachivantara/uikit-styles": "workspace:*",
     "@vitejs/plugin-react": "^2.2.0",
+    "@mui/material": "^5.10.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "vite": "^3.2.3",
