--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -57,6 +57,8 @@
     "yargs": "^17.6.2"
   },
   "devDependencies": {
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
     "htmltojsx": "^0.3.0",
     "jsdom-no-contextify": "^3.1.0",
     "react": "^18.2.0",
