chore: common vite config, ts setup

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,10 +1,6 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../tsconfig",
   "compilerOptions": {
-    "outDir": "dist",
-    "baseUrl": "src",
-    "declarationDir": "dist/types"
-  },
-  "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+    "baseUrl": "src"
+  }
 }
