--- a/package.json
+++ b/package.json
@@ -12,30 +12,28 @@
     "url": "https://github.com/lumada-design/hv-uikit-react.git"
   },
   "scripts": {
-    "dev": "pnpm --parallel -F=!'./tools/**' dev",
+    "dev": "pnpm -F='./app' dev",
     "doc": "storybook dev -p 6006 --no-manager-cache --no-open",
-    "build": "pnpm -r build",
+    "build": "pnpm -r -F=!'./app' build",
     "build:doc": "storybook build",
     "lint": "eslint --ext .ts,.tsx --cache",
     "lint-staged": "lint-staged",
     "format": "npx prettier -w .",
-    "test": "pnpm --parallel -F=!'./tools/**' test",
+    "test": "pnpm --parallel -F=!'./tools' test",
     "test:e2e": "npx playwright test --config=config/playwright.config.ts",
-    "clean": "npx rimraf ./**/node_modules ./**/dist",
-    "prepare": "npx husky install && pnpm build"
-  },
-  "engines": {
-    "node": ">=16.16.0"
+    "clean": "pnpm -r clean && pnpm -r exec rm -rf node_modules",
+    "type-check": "pnpm -r type-check",
+    "prepare": "npx husky install"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.2.0",
     "@commitlint/config-conventional": "^17.2.0",
     "@playwright/test": "^1.27.1",
-    "@storybook/addon-a11y": "^7.0.0-alpha.48",
-    "@storybook/addon-essentials": "^7.0.0-alpha.48",
-    "@storybook/addon-links": "^7.0.0-alpha.48",
-    "@storybook/react": "^7.0.0-alpha.48",
-    "@storybook/react-vite": "^7.0.0-alpha.48",
+    "@storybook/addon-a11y": "7.0.0-alpha.48",
+    "@storybook/addon-essentials": "7.0.0-alpha.48",
+    "@storybook/addon-links": "7.0.0-alpha.48",
+    "@storybook/react": "7.0.0-alpha.48",
+    "@storybook/react-vite": "7.0.0-alpha.48",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
@@ -49,9 +47,9 @@
     "pretty-quick": "^3.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "^7.0.0-alpha.48",
+    "storybook": "7.0.0-alpha.48",
     "typescript": "^4.8.4",
-    "vite": "^3.2.3",
+    "vite": "^3.2.4",
     "vite-tsconfig-paths": "^3.5.2"
   },
   "husky": {
@@ -71,11 +69,7 @@
       "@commitlint/config-conventional"
     ]
   },
-  "pnpm": {
-    "overrides": {
-      "yargs-parser@<=5.0.0": ">=5.0.1",
-      "node-fetch@<2.6.1": ">=2.6.1",
-      "node-fetch@<2.6.7": ">=2.6.7"
-    }
+  "engines": {
+    "node": ">=16.16.0"
   }
 }
