--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -18,39 +18,27 @@
     "type": "git",
     "url": "https://github.com/lumada-design/hv-uikit-react.git"
   },
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.es.js",
-  "types": "dist/index.d.ts",
-  "exports": {
-    ".": {
-      "require": "./dist/index.cjs.js",
-      "import": "./dist/index.es.js"
-    }
-  },
+  "main": "src/index.ts",
+  "module": "dist/es/index.js",
+  "types": "dist/types/index.d.ts",
   "sideEffects": false,
   "files": [
     "dist"
   ],
   "scripts": {
-    "dev": "vite build --watch",
     "build": "tsc && vite build",
-    "test": "vitest run",
-    "test:ui": "vitest --ui",
-    "coverage": "vitest run --coverage"
+    "clean": "del-cli dist",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
     "@styled-system/variant": "^5.1.5",
-    "styled-system": "^5.1.5",
-    "vite": "^3.2.3",
-    "vite-plugin-dts": "^1.7.0",
-    "vite-tsconfig-paths": "^3.5.2"
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
-    "@emotion/babel-plugin": "^11.10.5",
-    "@vitejs/plugin-react": "^2.2.0",
-    "jsdom": "^20.0.2",
-    "typescript": "^4.8.4"
+    "@styled-system/variant": "^5.1.5",
+    "del-cli": "^5.0.0",
+    "typescript": "^4.8.4",
+    "vite": "^3.2.4",
+    "vite-plugin-dts": "^1.7.1"
   }
 }
